--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="grid-container">
+        <div class="sidebar">
+            
+        </div>
+        <div class="menu">
+
+        </div>
+        <div class="body">
+
+        </div>
+    </div>
 </body>
 </html>
