--- a/index.html
+++ b/index.html
@@ -64,7 +64,39 @@
             </div>
         </div>
         <div class="menu">
-
+            <div class="upper-menu">
+                <div class="left-upper-menu">
+                    <form id="search-form">
+                        <button type="submit" id="search-button">
+                            <img src="https://img.icons8.com/?size=512&id=82712&format=png" alt="Search Icon">
+                        </button>
+                        <input type="text" name="text" class="input" placeholder="Type here...">
+                    </form>
+                </div>
+                <div class="right-upper-menu">
+                    <img class="notification" src="https://img.icons8.com/?size=512&id=70098&format=png" alt="Notification Icon">
+                    <div class="company">
+                        <img src="https://img.icons8.com/?size=512&id=i1AHRU153gW3&format=png" alt="Conpany Logo">
+                        <p>Elijah Mathai</p>
+                    </div>
+                </div>
+            </div>
+            <div class="lower-menu">
+                <div class="lower-left-menu">
+                    <div class="lower-company">
+                        <img src="https://img.icons8.com/?size=512&id=i1AHRU153gW3&format=png" alt="Conpany Logo">
+                        <div>
+                            <small>Hi, there</small>
+                            <h2>Elijah Mathai</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="lower-right-menu">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
         <div class="body">
 
