--- a/index.html
+++ b/index.html
@@ -99,7 +99,68 @@
             </div>
         </div>
         <div class="body">
-
+            <div class="left-body">
+                <div class="left-body-nav">
+                    <h3>Your Projects</h3>
+                </div>
+                <div class="left-body-content">
+                    <div class="projects">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nam dolore veniam blanditiis voluptates, est possimus. Alias non in maiores quaerat quod labore, aspernatur commodi repellendus corporis, deserunt, quisquam esse!</p>
+                        <div class="project-images">
+                            <img src="https://img.icons8.com/?size=512&id=120700&format=png" alt="Favorite Icon">
+                            <img src="https://img.icons8.com/?size=512&id=4y6r43dyjbzw&format=png" alt="Eye Icon">
+                            <img src="https://img.icons8.com/?size=512&id=90278&format=png" alt="Share Icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Less Cool Project</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nam dolore veniam blanditiis voluptates, est possimus. Alias non in maiores quaerat quod labore, aspernatur commodi repellendus corporis, deserunt, quisquam esse!</p>
+                        <div class="project-images">
+                            <img src="https://img.icons8.com/?size=512&id=120700&format=png" alt="Favorite Icon">
+                            <img src="https://img.icons8.com/?size=512&id=4y6r43dyjbzw&format=png" alt="Eye Icon">
+                            <img src="https://img.icons8.com/?size=512&id=90278&format=png" alt="Share Icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Impossible App</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nam dolore veniam blanditiis voluptates, est possimus. Alias non in maiores quaerat quod labore, aspernatur commodi repellendus corporis, deserunt, quisquam esse!</p>
+                        <div class="project-images">
+                            <img src="https://img.icons8.com/?size=512&id=120700&format=png" alt="Favorite Icon">
+                            <img src="https://img.icons8.com/?size=512&id=4y6r43dyjbzw&format=png" alt="Eye Icon">
+                            <img src="https://img.icons8.com/?size=512&id=90278&format=png" alt="Share Icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Easy Peasy App</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nam dolore veniam blanditiis voluptates, est possimus. Alias non in maiores quaerat quod labore, aspernatur commodi repellendus corporis, deserunt, quisquam esse!</p>
+                        <div class="project-images">
+                            <img src="https://img.icons8.com/?size=512&id=120700&format=png" alt="Favorite Icon">
+                            <img src="https://img.icons8.com/?size=512&id=4y6r43dyjbzw&format=png" alt="Eye Icon">
+                            <img src="https://img.icons8.com/?size=512&id=90278&format=png" alt="Share Icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Ad Blocker</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nam dolore veniam blanditiis voluptates, est possimus. Alias non in maiores quaerat quod labore, aspernatur commodi repellendus corporis, deserunt, quisquam esse!</p>
+                        <div class="project-images">
+                            <img src="https://img.icons8.com/?size=512&id=120700&format=png" alt="Favorite Icon">
+                            <img src="https://img.icons8.com/?size=512&id=4y6r43dyjbzw&format=png" alt="Eye Icon">
+                            <img src="https://img.icons8.com/?size=512&id=90278&format=png" alt="Share Icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Money Maker</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nam dolore veniam blanditiis voluptates, est possimus. Alias non in maiores quaerat quod labore, aspernatur commodi repellendus corporis, deserunt, quisquam esse!</p>
+                        <div class="project-images">
+                            <img src="https://img.icons8.com/?size=512&id=120700&format=png" alt="Favorite Icon">
+                            <img src="https://img.icons8.com/?size=512&id=4y6r43dyjbzw&format=png" alt="Eye Icon">
+                            <img src="https://img.icons8.com/?size=512&id=90278&format=png" alt="Share Icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right-body"></div>
         </div>
     </div>
 </body>
