--- a/index.html
+++ b/index.html
@@ -160,7 +160,62 @@
                     </div>
                 </div>
             </div>
-            <div class="right-body"></div>
+            <div class="right-body">
+                <div class="right-upper-body">
+                    <div class="right-upper-body-nav">
+                        <h3>Announcements</h3>
+                    </div>
+                    <div class="right-upper-body-content">
+                        <div class="announcement-1">
+                            <h4>Site Maintenance</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eaque nam quos aliquid asperiores eos sit voluptate illum, praesentium reiciendis aut, explicabo necessitatibus quasi ad at. Dolore iste expedita ipsum!</p>
+                        </div>
+                        <div class="announcement-2">
+                            <h4>Commnunity Share Day</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eaque nam quos aliquid asperiores eos sit voluptate illum, praesentium reiciendis aut, explicabo necessitatibus quasi ad at. Dolore iste expedita ipsum!</p>
+                        </div>
+                        <div class="announcement-3">
+                            <h4>Updated Privacy Polocy </h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eaque nam quos aliquid asperiores eos sit voluptate illum, praesentium reiciendis aut, explicabo necessitatibus quasi ad at. Dolore iste expedita ipsum!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-lower-body">
+                    <div class="right-lower-body-nav">
+                        <h3>Trending</h3>
+                    </div>
+                    <div class="right-lower-body-content">
+                        <div class="trending">
+                            <img src="https://img.icons8.com/?size=512&id=GzIwyjfZtRbB&format=png" alt="Dog Profile">
+                            <div>
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trending">
+                            <img src="https://img.icons8.com/?size=512&id=i1AHRU153gW3&format=png" alt="Conpany Logo">
+                            <div>
+                                <h4>@elijah</h4>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
+                        <div class="trending">
+                            <img src="https://img.icons8.com/?size=512&id=Hz63YurNGC9q&format=png" alt="Spiderman Logo">
+                            <div>
+                                <h4>@kendall</h4>
+                                <p>Life Changing App</p>
+                            </div>
+                        </div>
+                        <div class="trending">
+                            <img src="https://img.icons8.com/?size=512&id=ekrf8EMvqXY2&format=png" alt="Penguin Logo">
+                            <div>
+                                <h4>@alex</h4>
+                                <p>No Traffic Maker</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
